--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AirBnb</title>
+    <title>AirBnb Clone</title>
 </head>
 <body style="margin: 0; padding: 0;">
-    <header style="background-color: #FF0000; height: 70px; width: 100%">
+     <header 
+     style="background-color: #FF0000; height: 70px; width: 100%;">
     </header>
-    <footer style="background-color: #00FF00; height: 60px; width: 100%; position: absolute; line-height: 60px; text-align:center; bottom:0;">
-        ALX School
-    </footer>
+     <footer
+     style="background-color: #00FF00; height:60px; width: 100%; position: absolute; line-height:60px; text-align: center; bottom: 0;">
+     ALX School
+     </footer>
 </body>
 </html>
