--- a/web_static/6-index.html
+++ b/web_static/6-index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/3-header.css">
     <link rel="stylesheet" href="css/3-footer.css">
     <link rel="stylesheet" href="css/4-common.css">
-    <link rel="stylesheet" href="css/5-filters.css">
+    <link rel="stylesheet" href="css/6-filters.css">
     <link rel="icon" type="images-icon" href="images/icon.png">
 </head>
 <body>
@@ -22,6 +22,15 @@
             <div class="locations">
                 <h3>States</h3>
                 <h4>Bujumbura, Burundi...</h4>
+                <ul class="popover">
+                    <li>
+                        <h2>Arizona</h2>
+                    </li>
+                    <ul>
+                        <li>Page</li>
+                        <li>Page1</li>
+                    </ul>
+                </ul>
             </div>
             <div class="amenities">
                 <h3>Amenities</h3>
